<resources>
    <string name="app_name">Chateau</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="imageLogo">Logo</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="createacc">Create account</string>
    <string name="haveacc">Already have an account?</string>
</resources>