<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8492E4"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chateau_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#DCD9D9"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <EditText
            android:id="@+id/signupnamebox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="30dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/signupemailbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/signuppassbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/createbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#03A9F4"
            android:text="@string/createacc" />

        <Button
            android:id="@+id/havebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#008EFF"
            android:text="@string/haveacc" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>