<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8492E4"
    tools:context=".LoginPage">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#DCD9D9"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/loginemailbox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints="@string/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/loginpassbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:paddingEnd="10dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageLogo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chateau_logo" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="170dp"
        android:backgroundTint="#028FFF"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/SignupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="170dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>